fix spacing

--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,11 @@ html, body {
   transition: all 0.3s ease;
   height: 40px;
   outline: rgba(255, 255, 255, 0) 0px solid;
+  padding-left: 0;
 }
 .header img {
   height: 50px;
-  padding: 10px 0px;
+  padding: 10px;
   transition: padding 0.3s ease;
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0);
@@ -42,7 +43,7 @@ html, body {
 .header img:hover {
   padding: 8px 5px;
   background-color: rgba(0, 0, 0, 0.516);
-  border-radius: 8px;
+  border-radius: 20px 8px 8px 20px;
   backdrop-filter: blur(40px);
   -webkit-backdrop-filter: blur(40px);
   outline: rgba(255, 255, 255, 0.145) 1px solid;
